# Lift-2D-nimation

./: CMakeLists.txt  area.cpp  area.h  main.cpp  matrix.cpp  matrix.h  shape.cpp  shape.h  window.cpp  window.h
